--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 300px;
+  width: fit-content;
 }
 
 .clockFace p {
