--- a/src/assets/Button/button.module.scss
+++ b/src/assets/Button/button.module.scss
@@ -1,9 +1,12 @@
 .buttonStyle {
-  width: 50%;
   background-color: #fff;
   border-radius: 8px;
   padding: 1rem;
   display: inline-block;
   font-family: noto sans, sans-serif;
   font-size: 1.5rem;
+}
+
+.buttonStyle:active {
+  background-color: gray;
 }
